[package]
name = "daemon-runner"
version = "0.0.0"
license = "CC0-1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]

[lib]
name = "daemon_runner"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.23"
bitcoincore-rpc = "0.11"
rand = "0.6"
regex = "1"
log = "0.4.5"
serde = { version = "1.0", features = [ "derive" ] }
liquid-rpc = "0.2.0"

[dev-dependencies]
fern = "0.5.6"
